@@ -20,8 +20,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         package="com.frostwire.android"
         android:installLocation="auto"
-        android:versionCode="716"
-        android:versionName="2.6.5">
+        android:versionCode="717"
+        android:versionName="2.6.6">
     <!-- IMPORTANT!! Ignore these, just use as a reference, now it's handled with gradle -->
     <!-- Plus  android:versionCode="9070xyz" (always commit like this, plus!)-->
     <!-- Basic android:versionCode="9060xyz" (don't commit like this) -->
